@@ -38,12 +38,10 @@ a img {
 <DT>2013-01-21: Prooftree 0.11 released
 <DD>
 <UL>
+<LI>incompatible protocol change: requires Proof General &GT;= 4.3pre130327
+</LI>
 <LI>support for bullets, braces and <KBD>Grab Existential
     Variables</KBD> of Coq 8.4
-</LI>
-<LI>incompatible protocol change: requires Proof General &GT; 4.3pre130111
-</LI>
-<LI>Support bullets, braces and <KBD>Grab Existential Variables</KBD>
 </LI>
 <LI>New context menu items for retraction (undo), inserting proof
 commands and proof scripts from subproofs
@@ -181,7 +179,7 @@ far as possible)
 <HR noshade size=2>
 <FONT SIZE="-2">
 last changed on 
-<!-- hhmts start -->21 Jan 2013
+<!-- hhmts start -->27 Mar 2013
 <!-- hhmts end -->
 by <A HREF="/index.html.en">Hendrik</A>
 </FONT></BODY> </HTML>
