@@ -300,7 +300,7 @@ requires
 8.4beta or better
 and 
 .B Proof General
-newer than the 4.3 pre-release from 11th January 2013.
+4.3pre130327 or better.
 .\"
 .\" ==========================================================================
 .\" ================ Files ===================================================
