@@ -1,3 +1,7 @@
+2013-03-27  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* change required Proof General version to 4.3pre130327
+
 2013-03-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* another clone regression
